...
import com.android.gatherly.ui.theme.theme_todo_priority_level_medium
import com.android.gatherly.ui.todo.AddTodoScreen
import com.android.gatherly.ui.todo.EditTodoScreen

/** Test tags for [PriorityDropDown] composable and its items. */
object PriorityDropDownTestTags {
  const val PRIORITY_LEVEL_DROP_DOWN = "priorityLevelDropDown"
  const val PRIORITY_NONE_ITEM = "priorityLevelNoneItem"
  const val PRIORITY_LOW_ITEM = "priorityLevelLowItem"
  const val PRIORITY_MEDIUM_ITEM = "priorityLevelMediumItem"
  const val PRIORITY_HIGH_ITEM = "priorityLevelHighItem"
}

/**
 * Helper composable function: The user can assign to his task a specif priority level Displayed in
 * [AddTodoScreen] and [EditTodoScreen]
 *
...
